appId: com.kimishiba.ebikegpsapp
---
- launchApp
- assertVisible: "OPERATOR AUTHENTICATION"
- tapOn: "AUTHENTICATE & LOG IN"
- assertVisible: "CURRENT SPEED"
- assertVisible: "BATTERY LEVEL"
- assertVisible: "UPDATE FREQ"
- tapOn: "30S STOLEN"
- tapOn: "1M NORMAL"
- assertVisible: "REMOTE MOTOR KILL SWITCH"



